[package]
name = "mdr32f9q2l-pac"
version = "0.1.0"
edition = "2018"
description = "Peripheral Access Crate for Milandr's mdr32f9q2l microcontroller"
keywords = ["no-std", "arm", "cortex-m", "milandr", "peripherals"]
license = "MIT"
repository = "https://github.com/kekcheburec/mdr32f9q2l"
documentation = "https://docs.rs/mdr32f9q2l"

[dependencies]
cortex-m = "0.7.3"
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = ">=0.6.15,<0.8"

[features]
rt = ["cortex-m-rt/device"]
